[project]
name = "data_structures_and_algorithms_ii"
version = "1.0.0"
authors = [
    { name = "Sheldon Handler", email = "57599804+Sheldon-Handler@users.noreply.github.com" },
]
description = "Data Structures and Algorithms II"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/Sheldon-Handler/data_structures_and_algorithms_ii"
"Bug Tracker" = "https://github.com/Sheldon-Handler/data_structures_and_algorithms_ii/issues"
"Workflow" = "https://github.com/Sheldon-Handler/data_structures_and_algorithms_ii/actions"
