[metadata]
name = c950
version = 1.0
author = Sheldon Handler
author_email = 57599804+Sheldon-Handler@users.noreply.github.com
description = Data Structures and Algorithms II
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
package_dir = c950

[options.packages.find]
include = *
